update dan delete crops
